# pyannote-rs

./: .gitignore  .gitmodules  BUILDING.md  Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
crates/knf-rs/: Cargo.toml
crates/knf-rs/src/: lib.rs
crates/knf-rs/sys/: Cargo.toml  build.rs
examples/: diarize.rs  infinite.rs  max_speakers.rs  save_segments.rs
libpyannote/: Cargo.toml  build.rs
libpyannote/src/: lib.rs
libpyannote/test/: test.py
src/: embedding.rs  identify.rs  lib.rs  main.rs  plda.rs  segment.rs  session.rs  utils.rs  wav.rs
