[workspace]
members = ["crates/knf-rs", "crates/knf-rs/sys"]

[package]
name = "pyannote-rs"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Speaker diarization using pyannote in Rust"
repository = "https://github.com/thewh1teagle/pyannote-rs"

[dependencies]
eyre = "0.6.12"
hound = "3.5.1"
ndarray = "0.16"
ort = "2.0.0-rc.9"
knf-rs = { path = "crates/knf-rs", version = "0.3.1", features = [] }

[features]
default = []
coreml = ["ort/coreml"]
directml = ["ort/directml"]
load-dynamic = ["ort/load-dynamic"]

[[example]]
name = "max_speakers"

[[example]]
name = "infinite"
