[package]
name = "knf-rs"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "fbank features extractor without external dependencies"
repository = "https://github.com/thewh1teagle/pyannote-rs"

[dependencies]
knf-rs-sys = { path = "sys", version = "0.3.0-beta.0", features = [] }
eyre = "0.6.12"
ndarray = "0.16"


[features]
default = []
